syntax = "proto3";

package MyPayloadProto;

message Digi
{
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
  double time_stamp = 4;
  double time_stamperror = 5;
}

message Hit
{
  int32 det_id = 1;
  int32 mcindex = 2;
  double posx = 3;
  double posy = 4;
  double posz = 5;
  double dposx = 6;
  double dposy = 7;
  double dposz = 8;
  double time_stamp = 9;
  double time_stamperror = 10;
}

message DigiPayload
{
  repeated Digi digi = 1;
  bytes bigBuffer = 2;
}

message HitPayload
{
  repeated Hit hit = 1;
  bytes bigBuffer = 2;
}
